--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-    "outDir": "dist/"
+    "outDir": "dist/",
+    "declaration": true
   },
   "include": [
     "src/**/*"
