--- a/.github/workflows/interface-ci-build.yml
+++ b/.github/workflows/interface-ci-build.yml
@@ -17,15 +17,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Set up Node 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
-      - name: Cache node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules/
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node_modules-
-      - name: Install and configure
-        run: |
-          npm run build
+      - name: Run tests
+        run: npm test
+      - name: Run build
+        run: npm run build
