--- a/.github/workflows/interface-ci-build.yml
+++ b/.github/workflows/interface-ci-build.yml
@@ -28,3 +28,8 @@ jobs:
         run: npm test
       - name: Run build
         run: npm run build
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
