--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "lint": "eslint ./src/"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0"
   }
 }
