--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exasol/extension-manager-interface",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "main": "dist/api.js",
   "types": "dist/api.d.ts",
   "description": "Interface for extensions for the Exasol extension manager.",
@@ -8,13 +8,17 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "lint": "eslint ./src/"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0"
   }
 }
