--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
-package-lock.json linguist-generated=true
+package-lock.json         linguist-generated=true
+dependencies.md           linguist-generated=true
+doc/changes/changelog.md  linguist-generated=true
+
+.github/workflows/broken_links_checker.yml  linguist-generated=true
+.github/workflows/project-keeper-verify.yml linguist-generated=true
+.github/workflows/project-keeper.sh         linguist-generated=true
