--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "typescript": "5.0.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0"
-  }
+  },
+  "files": [
+    "LICENSE",
+    "README.md",
+    "doc/developers_guide/developers_guide.md",
+    "dependencies.md",
+    "tsconfig.json",
+    "src/",
+    "dist/"
+  ]
 }
