--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "@exasol/extension-manager-interface",
-  "version": "0.2.0",
-  "main": "dist/api.js",
-  "types": "dist/api.d.ts",
-  "description": "Interface for extensions for the Exasol extension manager.",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc --build",
-    "clean": "tsc --build --clean",
-    "test": "jest",
-    "test-watch": "jest --watch",
-    "lint": "eslint ./src/"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.2",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "5.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1"
-  },
-  "files": [
-    "LICENSE",
-    "README.md",
-    "doc/developers_guide/developers_guide.md",
-    "dependencies.md",
-    "tsconfig.json",
-    "src/",
-    "dist/"
-  ]
+    "name": "@exasol/extension-manager-interface",
+    "version": "0.3.0",
+    "main": "dist/api.js",
+    "types": "dist/api.d.ts",
+    "description": "Interface for extensions for the Exasol extension manager.",
+    "license": "MIT",
+    "scripts": {
+        "build": "tsc --build",
+        "clean": "tsc --build --clean",
+        "test": "jest",
+        "test-watch": "jest --watch",
+        "lint": "eslint --report-unused-disable-directives --exit-on-fatal-error ./src/"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.3",
+        "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "@typescript-eslint/parser": "^6.2.0",
+        "eslint": "^8.45.0",
+        "jest": "^29.6.2",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "5.1.6"
+    },
+    "files": [
+        "LICENSE",
+        "README.md",
+        "doc/developers_guide/developers_guide.md",
+        "dependencies.md",
+        "tsconfig.json",
+        "src/",
+        "dist/"
+    ]
 }
