--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "ES2015",
     "outDir": "dist/",
     "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "declaration": true,
     "strict": true,
     "strictNullChecks": false
