--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "target": "ES6",
     "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "outDir": "dist/",
     "declaration": true,
     "strict": true,
