Exclude tests from coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.exclusions=src/*.test.ts,*.js
 sonar.tests=src/
 sonar.test.inclusions=src/*.test.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.exclusions=src/**/*.test.ts
