--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@exasol/extension-manager-interface",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "main": "dist/api.js",
     "types": "dist/api.d.ts",
     "description": "Interface for extensions for the Exasol extension manager.",
@@ -8,16 +8,16 @@
     "scripts": {
         "build": "tsc --build",
         "clean": "tsc --build --clean",
-        "test": "jest",
+        "test": "jest --silent",
         "test-watch": "jest --watch",
         "lint": "eslint --report-unused-disable-directives --exit-on-fatal-error ./src/"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.3",
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "eslint": "^8.45.0",
-        "jest": "^29.6.2",
+        "@jest/globals": "^29.6.3",
+        "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@typescript-eslint/parser": "^6.4.1",
+        "eslint": "^8.47.0",
+        "jest": "^29.6.3",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "5.1.6"
