--- a/.github/workflows/project-keeper-verify.yml
+++ b/.github/workflows/project-keeper-verify.yml
@@ -14,7 +14,7 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -27,7 +27,11 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: "1.20"
+          cache-dependency-path: |
+            go.sum
+            .github/workflows/project-keeper-verify.yml
+            .github/workflows/project-keeper.sh
 
       - name: Set up NPM
         uses: actions/setup-node@v3
@@ -43,17 +47,6 @@ jobs:
           key: ${{ runner.os }}-pk-${{ hashFiles('.github/workflows/project-keeper.sh') }}
           restore-keys: |
             ${{ runner.os }}-pk-
-
-      - name: Cache go-licenses
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-licenses-${{ hashFiles('.github/workflows/project-keeper-verify.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-go-licenses-${{ hashFiles('.github/workflows/project-keeper-verify.yml') }}
-            ${{ runner.os }}-go-licenses-
 
       - name: Project Keeper Verify
         run: ./.github/workflows/project-keeper.sh
