--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@exasol/extension-manager-interface",
-    "version": "0.3.1",
+    "version": "0.4.0",
     "main": "dist/api.js",
     "types": "dist/api.d.ts",
     "description": "Interface for extensions for the Exasol extension manager.",
@@ -9,18 +9,18 @@
         "build": "tsc --build",
         "clean": "tsc --build --clean",
         "test": "jest --silent",
-        "test-watch": "jest --watch",
+        "test-watch": "jest --watch --silent",
         "lint": "eslint --report-unused-disable-directives --exit-on-fatal-error ./src/"
     },
     "devDependencies": {
-        "@jest/globals": "^29.6.3",
-        "@typescript-eslint/eslint-plugin": "^6.4.1",
-        "@typescript-eslint/parser": "^6.4.1",
-        "eslint": "^8.47.0",
-        "jest": "^29.6.3",
+        "@jest/globals": "^29.7.0",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
+        "eslint": "^8.52.0",
+        "jest": "^29.7.0",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "5.1.6"
+        "typescript": "5.2.2"
     },
     "files": [
         "LICENSE",
