--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.4.1",
     "main": "dist/api.js",
     "types": "dist/api.d.ts",
+    "type": "module",
     "description": "Interface for extensions for the Exasol extension manager.",
     "license": "MIT",
     "scripts": {
