--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     permissions:
       contents: read
     concurrency:
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: "npm"
       - name: Install dependencies
         run: npm ci
@@ -32,6 +32,8 @@ jobs:
         run: npm run build
       - name: Run linter
         run: npm run lint
+      - name: Run pack
+        run: npm pack
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
