--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.4.4",
     "main": "dist/api.js",
     "types": "dist/api.d.ts",
+    "type": "module",
     "description": "Interface for extensions for the Exasol extension manager.",
     "license": "MIT",
     "scripts": {
@@ -15,14 +16,12 @@
     },
     "devDependencies": {
         "@jest/globals": "^29.7.0",
-        "@typescript-eslint/eslint-plugin": "^7.8.0",
-        "@typescript-eslint/parser": "^7.8.0",
-        "eslint": "^8.57.0",
-        "typescript-eslint": "^7.8.0",
+        "eslint": "^9.20.0",
+        "typescript-eslint": "^8.23.0",
         "jest": "^29.7.0",
-        "ts-jest": "^29.1.2",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
-        "typescript": "5.4.5"
+        "typescript": "5.7.3"
     },
     "files": [
         "LICENSE",
