--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "noEmitOnError": true,
     "removeComments": false,
     "sourceMap": true,
-    "target": "ES5",
+    "target": "ES6",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "outDir": "dist/",
     "declaration": true,
     "strict": true,
